@@ -1,3 +1,9 @@
+2001-10-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclEvent.c (Tcl_FinalizeThread): moved freeing of
+	tclLibraryPath to before the thread exit handlers are called.
+	Slight modification to change on 2001-09-24.
+
 2001-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/configure: regen'ed
